# gitignore

./: .gitignore  README.md  action.yml  package-lock.json  package.json
occam-gitignore/: .coveragerc  .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
occam-gitignore/bench/corpus/: go-service.json  java-maven.json  node-ts-app.json  patterns.json  py-docker.json  ruby-rails-ish.json  rust-cli.json
occam-gitignore/conformance/: README.md  SPEC.md  generate_cases.py  run_conformance.py
occam-gitignore/conformance/cases/000-python-minimal/: expected_hashes.json
occam-gitignore/conformance/cases/001-python-nested/: expected_hashes.json  tree.json
occam-gitignore/conformance/cases/003-node-ts/: expected.gitignore  expected_hashes.json  tree.json
occam-gitignore/conformance/cases/004-go-minimal/: expected.gitignore  expected_hashes.json  tree.json
occam-gitignore/conformance/cases/005-rust-minimal/: expected_hashes.json  tree.json
occam-gitignore/conformance/cases/006-docker-only/: expected.gitignore  expected_hashes.json  tree.json
occam-gitignore/conformance/cases/007-docker-compose/: expected.gitignore  expected_hashes.json  tree.json
occam-gitignore/conformance/cases/008-terraform-minimal/: expected.gitignore  expected_hashes.json  tree.json
occam-gitignore/conformance/cases/009-jupyter-minimal/: expected.gitignore  expected_hashes.json  tree.json
occam-gitignore/conformance/fixtures/: fixtures_hash.json  rules_table.json
occam-gitignore/data/templates/: common.gitignore  csharp.gitignore  go.gitignore  node.gitignore  python.gitignore
(+94 files in other folders)
