[project]
name = "occam-gitignore"
version = "0.0.1"
description = "Deterministic .gitignore generation. Zero latency. Reproducible."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Fabrizio Salmi" }]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
occam-gitignore-core = { workspace = true }
occam-gitignore-cli = { workspace = true }
occam-gitignore-training = { workspace = true }
occam-gitignore-bench = { workspace = true }
occam-gitignore-api = { workspace = true }
occam-gitignore-mcp = { workspace = true }

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6.115",
  "mypy>=1.11",
  "ruff>=0.6",
  "httpx>=0.27",
  "anyio>=4",
  "occam-gitignore-core",
  "occam-gitignore-cli",
  "occam-gitignore-training",
  "occam-gitignore-bench",
  "occam-gitignore-api",
  "occam-gitignore-mcp",
]

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = "-q --strict-markers --strict-config"
filterwarnings = ["error"]
xfail_strict = true
